--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
 		"build": "vite build"
 	},
 	"dependencies": {
-		"@vitejs/plugin-vue": "^4.1.0",
 		"@vueuse/core": "^10.0.2",
 		"eslint": "^8.38.0",
 		"pinia": "^2.0.35",
-		"sass": "^1.62.0",
-		"vite": "^4.3.0",
 		"vue": "^3.2.47",
 		"vue-router": "^4.1.6"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^4.1.0",
+		"eslint": "^8.39.0",
+		"eslint-plugin-vue": "^9.11.0",
+		"sass": "^1.62.0",
+		"vite": "^4.3.0"
 	}
 }
